--- a/_posts/2011-11-03-Beta-Two.markdown
+++ b/_posts/2011-11-03-Beta-Two.markdown
@@ -16,7 +16,8 @@ The general agenda will be to give an update on our current status, address tech
 I'm also going to try to use Lync and Skype at the same time, so if you're having troubles with Lync, and you use skype, add me (garrett.serack) and I'll get you online that way. Hopefully this will help smooth out some of the bumps.
 
 [You can download the Lync client here](http://www.microsoft.com/download/en/details.aspx?id=23396)
-[Connect by clicking on the link here](https://join.microsoft.com/meet/garretts/HZ96LF57) tomorrow morning (I should be on earlier than 10:30, join early if you want :).
+<br>
+[Connect to the meeting by clicking on the link here](https://join.microsoft.com/meet/garretts/HZ96LF57) tomorrow morning (I should be on earlier than 10:30, join early if you want :).
 Or dial in (see below!) for just the audio.
 
 ## Oh, by the way, I'm gonna give away some prizes tomorrow!
