--- a/_posts/2011-11-03-Beta-Two.markdown
+++ b/_posts/2011-11-03-Beta-Two.markdown
@@ -17,7 +17,7 @@ I'm also going to try to use Lync and Skype at the same time, so if you're havin
 
 [You can download the Lync client here](http://www.microsoft.com/download/en/details.aspx?id=23396)
 <br>
-[Connect to the meeting by clicking on the link here](https://join.microsoft.com/meet/garretts/HZ96LF57) tomorrow morning (I should be on earlier than 10:30, join early if you want :).
+[Connect to the meeting by clicking on the link here Friday at 10:30PDT](https://join.microsoft.com/meet/garretts/HZ96LF57) tomorrow morning (I should be on earlier than 10:30, join early if you want :).
 Or dial in (see below!) for just the audio.
 
 ## Oh, by the way, I'm gonna give away some prizes tomorrow!
@@ -30,7 +30,7 @@ Or dial in (see below!) for just the audio.
 <td width="100%" style="font-size:17px; padding:5px;">
 
 
-<u><a href="https://join.microsoft.com/meet/garretts/HZ96LF57">Join online meeting</a></u>
+<u><a href="https://join.microsoft.com/meet/garretts/HZ96LF57">Join online meeting</a></u>Friday 10:30PDT
 <br>
 <br><b>Join by Phone</b>
 <br> <b>Toll Free:</b> 1(888)320-3585
