--- a/_posts/2011-11-03-Beta-Two.markdown
+++ b/_posts/2011-11-03-Beta-Two.markdown
@@ -43,6 +43,6 @@ Or dial in (see below!) for just the audio.
 <br>
 or
 <br>
-via skype: <a href="skype:garrett.serack?call&token=TOKEN">skype:garrett.serack?call&token=TOKEN</a>
+<a href="skype:garrett.serack?call&token=TOKEN">New! Via Skype</a>
 </td>
 </table>
